src/test/deca/syntax/invalid/resultats/test21_return-synt.res
./src/test/deca/syntax/invalid/test21_return.deca:15:8: mismatched input ';' expecting {INT, '-', 'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '(', '!', FLOAT, STRING}
